--- a/web/src/app/common/login/login.component.html
+++ b/web/src/app/common/login/login.component.html
@@ -4,7 +4,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title">Đăng nhập</h1>
+        <h1 class="modal-title">Sign In</h1>
       </div>
       <div class="modal-body">
         <form role="form" [formGroup]="loginForm" (ngSubmit)="doLogin()">
@@ -16,7 +16,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label">Mật Khẩu</label>
+            <label class="control-label">Password</label>
             <div>
               <input type="password" class="form-control input-lg" name="password" formControlName="password">
             </div>
@@ -26,9 +26,9 @@
           </div>
           <div class="form-group">
             <div>
-              <button type="submit" class="btn btn-success" [disabled]="!loginForm.valid">Đăng nhập</button>
-              <a class="btn btn-link" href="#" (click)="showForgotPass()">Quên mật khẩu?</a>
-              <a class="btn btn-link" href="#" (click)="showRegister()">Đăng ký mới?</a>
+              <button type="submit" class="btn btn-success" [disabled]="!loginForm.valid">Sign In</button>
+              <a class="btn btn-link" href="#" (click)="showForgotPass()">Forgot password?</a>
+              <a class="btn btn-link" href="#" (click)="showRegister()">Don't have account?</a>
             </div>
           </div>
         </form>
