--- a/web/src/app/common/reset-password/reset-password.component.html
+++ b/web/src/app/common/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title">Đặt lại mật khẩu</h1>
+        <h1 class="modal-title">Reset Password</h1>
       </div>
       <div *ngIf="!success" class="modal-body">
         <form role="form" [formGroup]="resetPassForm" (ngSubmit)="resetPass()">
@@ -20,7 +20,7 @@
           </div>
           <div class="form-group">
             <div>
-              <button type="submit" class="btn btn-success" [disabled]="!resetPassForm.valid">Đặt lại</button>
+              <button type="submit" class="btn btn-success" [disabled]="!resetPassForm.valid">Reset Password</button>
             </div>
           </div>
         </form>
