--- a/web/src/app/user/area/area.component.html
+++ b/web/src/app/user/area/area.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Quản lí khu vực</h1>
+      <h1 class="modal-title">Manage area</h1>
     </div>
     <div class="modal-body">
       <form role="form" [formGroup]="formAdd" (ngSubmit)="addArea()">
         <div class="col-md-12 row">
           <div class="col-md-9">
             <div class="form-group">
-              <label class="control-label">Tên khu vực</label>
+              <label class="control-label">Name of area</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="area" formControlName="area">
@@ -19,7 +19,7 @@
           <div class="col-md-3 btn-center">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formAdd.valid">
-                  <i class="fas fa-plus-circle"></i> &nbsp;Thêm khu vực
+                  <i class="fas fa-plus-circle"></i> &nbsp;Create
               </button>
             </div>
           </div>
@@ -31,7 +31,7 @@
         <div class="col-md-12 row">
           <div class="col-md-9">
             <div class="form-group">
-              <label class="control-label">Tên khu vực</label>
+              <label class="control-label">Name of area</label>
               <span class="required"> *</span>
               <div class="input-include-error">
                 <input type="text" class="form-control input-lg" name="area" formControlName="area">
@@ -42,7 +42,7 @@
           <div class="col-md-3 btn-center">
             <div class="form-group">
               <button type="submit" class="btn btn-success" [disabled]="!formEdit.valid">
-                <i class="fas fa-pen-square"></i> &nbsp;Cập nhật tên khu vực
+                <i class="fas fa-pen-square"></i> &nbsp;Update
               </button>
             </div>
           </div>
